@@ -353,9 +353,10 @@ public class OpponentsSectionController {
    */
   @PostMapping("/application/opponents/individual/create")
   public String createNewIndividual(
-      @ModelAttribute(CURRENT_OPPONENT) final IndividualOpponentFormData opponentFormData,
       @SessionAttribute(APPLICATION_ID) final String applicationId,
       @SessionAttribute(USER_DETAILS) final UserDetail user,
+      @Validated @ModelAttribute(CURRENT_OPPONENT)
+      final IndividualOpponentFormData opponentFormData,
       final BindingResult bindingResult,
       final Model model) {
 
@@ -371,8 +372,8 @@ public class OpponentsSectionController {
                       .description(opponentFormData.getRelationshipToCase())))
               .blockOptional()
               .orElseThrow(() -> new CaabApplicationException(
-                  String.format("Failed to retrieve relationship to case with code: %s",
-                      opponentFormData.getRelationshipToCase())));
+              "Failed to retrieve relationship to case with code: %s".formatted(
+                  opponentFormData.getRelationshipToCase())));
 
       opponentFormData.setDateOfBirthMandatory(relationshipToCase.getDateOfBirthMandatory());
     }
@@ -413,7 +414,7 @@ public class OpponentsSectionController {
         .filter(opponentFormData -> opponentFormData.getId().equals(opponentId))
         .findFirst()
         .orElseThrow(() -> new CaabApplicationException(
-            String.format("Invalid Opponent Id: %s", opponentId)));
+            "Invalid Opponent Id: %s".formatted(opponentId)));
 
     model.addAttribute(CURRENT_OPPONENT, currentOpponent);
 
@@ -504,7 +505,7 @@ public class OpponentsSectionController {
                 && Boolean.TRUE.equals(opponentFormData.getDeletable()))
             .findFirst()
             .orElseThrow(() -> new CaabApplicationException(
-                String.format("Invalid Opponent Id: %s", opponentId)));
+            "Invalid Opponent Id: %s".formatted(opponentId)));
 
     model.addAttribute(CURRENT_OPPONENT, currentOpponent);
 
@@ -535,7 +536,7 @@ public class OpponentsSectionController {
                     && Boolean.TRUE.equals(opponentFormData.getDeletable()));
 
     if (!validOpponentId) {
-      throw new CaabApplicationException(String.format("Invalid Opponent Id: %s", opponentId));
+      throw new CaabApplicationException("Invalid Opponent Id: %s".formatted(opponentId));
     }
 
     opponentService.deleteOpponent(opponentId, user);
